--- a/movies-explorer-frontend/package.json
+++ b/movies-explorer-frontend/package.json
@@ -13,10 +13,11 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && scp -r ./build/* ra_moskvitin@51.250.9.92:/home/ra_moskvitin/movies-explorer-frontend"
   },
   "eslintConfig": {
     "extends": [
